--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "0.8.4",
     "request": "2.33.0",
     "feedparser": "0.16.6",
-    "iconv": "2.0.7"
+    "iconv": "2.0.7",
+    "bufferhelper": "0.2.0"
   },
   "license": "MIT"
 }
