--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "request": "2.33.0",
     "feedparser": "0.16.6",
     "iconv": "2.0.7",
-    "bufferhelper": "0.2.0"
+    "bufferhelper": "0.2.0",
+    "cheerio": "0.13.1"
   },
   "license": "MIT"
 }
