--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "feedparser": "0.16.6",
     "iconv": "2.0.7",
     "bufferhelper": "0.2.0",
-    "cheerio": "0.13.1"
+    "cheerio": "0.13.1",
+    "mongoose": "3.8.8"
   },
   "license": "MIT"
 }
