--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "3.8.8",
     "async": "0.2.10",
     "iconv-lite": "0.2.11",
-    "moment": "2.5.1"
+    "moment": "2.5.1",
+    "rewire": "2.0.0"
   },
   "devDependencies": {
     "mocha": "1.17.1",
